# test_ui_pyqt6

./: README.md  main.py  pyproject.toml
app/: __init__.py
app/models/: table_model.py
app/ui/: ui_dialog_expand_table.py  ui_main.py
app/ui/templates/: dialog_expand_table.ui  main.ui
app/widgets/: dialog_expand_table.py  main.py
